fix account dropdown icon button on iphones

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2363,6 +2363,7 @@ body {
                 color: #7c7e7e;
                 cursor: pointer;
                 position: absolute;
+                left: 15px;
                 background-color: transparent;
                 display: block;
                 border: none;
